# coding-agent-demo-public

./: .gitignore  README.md  pyproject.toml  run_agent.py
demo_repo/: README.md  todo_api.py  todo_queries.py
demo_repo/tests/: test_todo_api.py  test_todo_queries.py
src/coding_agent/: __init__.py  cli.py  config.py  demo_repo_seed.py  evals.py  events.py  llm.py  models.py  prompts.py  render.py  repo_ops.py  repo_summary.py  reporting.py  research.py  retrieval.py  runner.py  storage.py  task_handlers.py  webapp.py  workflow.py
tests/: test_cli.py  test_evals.py  test_reporting.py  test_research.py  test_runner.py  test_webapp.py
