[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-demo"
version = "0.1.0"
description = "Local coding agent demo with a controlled CLI workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
coding-agent = "coding_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
